simple header added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
 </head>
 
 <body>
-    <h1></h1>
+
+    <header class="page-header">
+        <a href="#" class="page-header__logo">logo</a>
+        <div class="page-header__nav">
+            <a class="page-header__nav-links" href="#">vehicle</a>
+            <a class="page-header__nav-links" href="#">shopping</a>
+            <a class="page-header__nav-links" href="#">inventory</a>
+        </div>
+    </header>
+
+
+
 </body>
 
 </html>
