main slide lay out added + support structure

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
     <header class="page-header">
         <a href="#" class="page-header__logo">logo</a>
         <div class="page-header__nav">
@@ -23,7 +22,40 @@
         </div>
     </header>
 
-
+    <main>
+        <div class="jumbo-slider">
+            <ul class="jumbo-slider__container">
+                <li class="jumbo-slider__slide">
+                    <div class="jumbo-slider__slide-bg"></div>
+                    <div class="jumbo-slider__slide-info" style="background-image: url('img/wallpaper1.jpg');">
+                        <div class="jumbo-slider__slide-number">01</div>
+                        <div class="jumbo-slider__slide-title">Born to perform, develop to outperform</div>
+                        <div class="jumbo-slider__slide-description">
+                            Forged aluminum dominates the 4-wheel double-wishbone AMG RIDE CONTROL suspension
+                            with
+                            3-stage damping. Coil-overs at the rear are hub-mounted for extreme precision. The
+                            GT C
+                            adds
+                            active rear-wheel steering. AMG DYNAMIC SELECT lets you dial in the throttle,
+                            shifting,
+                            chassis, exhaust and more.
+                        </div>
+                    </div>
+                    <div class="jumbo-slider__slide-timer"></div>
+                </li>
+            </ul>
+            <div class="jumbo-slider__navigation">
+                <div class="jumbo-slider__circle"></div>
+                <div class="jumbo-slider__circle"></div>
+                <div class="jumbo-slider__circle"></div>
+            </div>
+            <div class="jumbo-slider__nav">
+                <a href="#" class="jumbo-slider__nav-link">01 amg gt</a>
+                <a href="#" class="jumbo-slider__nav-link">02 <span>maybach</span> gls</a>
+                <a href="#" class="jumbo-slider__nav-link">03 AMG G-Wagon</a>
+            </div>
+        </div>
+    </main>
 
 </body>
 
