Fix 'original home page' overflow & refactored scss

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <div class="jumbo-slider">
             <ul class="jumbo-slider__container">
-                <li class="jumbo-slider__slide jumbo-slider__slide--active">
+                <li class="jumbo-slider__slide">
                     <div class="jumbo-slider__slide-bg" style="background-image: url('img/wallpaper1.jpg');">
                     </div>
                     <div class="jumbo-slider__slide-info">
@@ -46,12 +46,12 @@
                     </div>
                     <div class="jumbo-slider__slide-timer"></div>
                     <div class="jumbo-slider__counter">
-                        <div class="jumbo-slider__counter-circle jumbo-slider__counter-circle--active"></div>
+                        <div class="jumbo-slider__counter-circle"></div>
                         <div class="jumbo-slider__counter-circle"></div>
                         <div class="jumbo-slider__counter-circle"></div>
                     </div>
                     <div class="jumbo-slider__nav">
-                        <a href="#" class="jumbo-slider__nav-link jumbo-slider__nav-link--active">01 amg gt</a>
+                        <a href="#" class="jumbo-slider__nav-link">01 amg gt</a>
                         <a href="#" class="jumbo-slider__nav-link">02 Maybach gls</a>
                         <a href="#" class="jumbo-slider__nav-link">03 AMG G-Wagon</a>
                     </div>
